Everything is working
So falta o update nos contacts

--- a/OPChat - Design/FriendRequest.resx
+++ b/OPChat - Design/FriendRequest.resx
@@ -1264,47 +1264,47 @@
   </data>
   <data name="bunifuImageButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAkdSURBVHhe7da9cSTXFQXgNRgEQ2AINBiCSrEwAqVAU6YCYDAyaSgAGjJk0JAJHWDnCipAszM9
-        0/36/Xxf1dQuscCg5957TvELAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwH+9vLx8
-        l9evef1y+RKTyE5/yOvvr39evgTvchgV/qIEJpFdvob/97etfv1TCfAuB/Ex/EUJDC47/N/wFyXAVzmE
-        a+EvSmBQ2d3/C39RAqvLAdwKf1ECg8nOvhX+ogRWlcXfG/6iBAaRXd0T/qIEVpOFbw1/UQKdy462hL8o
-        gVVk0Y+GvyiBTmU3j4S/KIHZZcHPhr8ogc5kJ8+EvyiBWWWxe4W/KIFOZBd7hL/8M6+fLm/NDLLQvcNf
-        lMDJsoM9w1/+yEsJzCCLPCr8RQmcJLM/IvxFCYwuCzw6/EUJNJaZHxn+ogRGlcW1Cn9RAo1k1i3CX5TA
-        aLKw1uEvSuBgmXHL8BclMIos6qzwFyVwkMz2jPAXJdC7LOjs8BclsLPM9MzwFyXQqyyml/AXJbCTzLKH
-        8Bcl0JsspLfwFyXwpMywp/AXJdCLLKLX8Bcl8KDMrsfwFyVwtiyg9/AXJbBRZtZz+IsSOEsGP0r4ixK4
-        U2Y1QviLEmgtAx8t/EUJ3JAZjRT+ogRayaBHDX9RAldkNiOGvyiBo2XAo4e/KIEPMpORw1+UwFEy2FnC
-        X5TARWYxQ/iLEthbBjpb+MvyJZAZzBT+ogT2kkHOGv6ybAnks88Y/qIEnpUBzh7+slwJ5DPPHP6iBB6V
-        wa0S/rJMCeSzrhD+ogS2ysBWC3+ZvgTyGVcKf1ECW2RYK4a/TFsC+Wwrhr+8lsCPl1HwLRnUz28jW9d0
-        JZDPtHL4X/2W1/eXcXBLhqUEJpHPIvzCv12GpgQGl88g/ML/uAxPCQwqzy78wv+8DFEJDCbPLPzCv58M
-        UwkMIs8q/MK/vwxVCXQuzyj8wn+cDFcJdCrPJvzCf7wMWQl0Js8k/MLfToatBDqRZxF+4W8vQ1cCJ8sz
-        CL/wnyfDVwInye8WfuE/X5agBBrL7xR+4e9HlqEEGsnvEn7h70+WogQOlt8h/MLfryxHCRwk7y38wt+/
-        LEkJ7CzvKfzCP44sSwnsJO8l/MI/nixNCTwp7yH8wj+uLE8JPCg/K/zCP74sUQlslJ8RfuGfR5apBO6U
-        7xV+4Z9PlqoEbsj3CL/wzyvLVQJX5N+EX/jnlyUrgQ/yNeEX/nVk2UrgIn8XfuFfT5a+fAnkJfzCv64s
-        f/US+PflzxUJP0pgUcLPuxyDEliH8PNZjkIJzE/4uS7HoQTmJfzcliNRAvMRfu6XY1EC8xB+tsvRKIHx
-        CT+Py/EogXEJP8/LESmB8Qg/+8kxKYFxCD/7y1Epgf4JP8fJcSmBfgk/x8uRKYH+CD/t5NiUQD+En/Zy
-        dErgfMLPeXJ8SuA8ws/5coRKoD3hpx85RiXQjvDTnxylEjie8NOvHKcSOI7w078cqRLYn/AzjhyrEtiP
-        8DOeHK0SeJ7wM64crxJ4nPAzvhyxEthO+JlHjlkJ3E/4mU+OWgncJvzMK8etBK4TfuaXI1cCnwk/68ix
-        K4F3ws96cvRKQPhZVQ7/h7z+9ZqChf31Mg5YRw7/Nfy/v0WAXy5jgfnl4IX/MyXA/HLown+dEmBeOXDh
-        v00JMJ8ctvDfTwkwjxy08G+nBBhfDln4H6cEGFcOWPifpwQYTw5X+PejBBhHDlb496cE6F8OVfiPowTo
-        Vw5U+I+nBOhPDlP421EC9CMHKfztKQHOl0MU/vMoAc6TAxT+8ykB2svhCX8/lADt5OCEvz9KgOPl0IS/
-        X0qA4+TAhL9/SoD95bCEfxxKgP3koIR/PEqA5+WQhH9cSoDH5YCEf3xKgO1yOMI/DyXA/XIwwj8fJcBt
-        ORThn5cS4LociPDPTwnwWQ5D+NehBHiXgxD+9SgBhH9xSmBlOYDVw/9bXn/5+tdlKYEVZfHC//Ly/WUW
-        P799ZV1KYCVZuPBfwl/y30qA+WXRwv8h/CVfVwLMKwsW/ivhL/l3JcB8sljhvxH+ku9TAswjCxX+O8Nf
-        8v1KgPFlkcK/MfwlP6cEGFcWKPwPhr/k55UA48nihP/J8Je8jxJgHFmY8O8U/pL3UwL0L4sS/p3DX/K+
-        SoB+ZUHCf1D4S95fCdCfLEb4Dw5/ye9RAvQjCxH+RuEv+X1KgPNlEcLfOPwlv1cJcJ4sQPhPCn/J71cC
-        tJfBC//J4S95DiVAOxm48HcS/pLnUQIcL4MW/s7CX/JcSoDjZMDC32n4S55PCbC/DFb4Ow9/yXMqAfaT
-        gQr/IOEveV4lwPMySOEfLPwlz60EeFwGKPyDhr/k+ZUA22Vwwj94+Es+hxLgfhmY8E8S/pLPowS4T4b1
-        j68zW9J04S/5XKuXwJ8vo+BbMqif8vrjbWRrmTb8JZ9v1RLwfwBbZGCrlcD04S/5nKuVgPA/IoNbpQSW
-        CX/J512lBIT/GRng7CWwXPhLPvfsJSD8e8ggZy2BZcNf8vlnLQHh31MGOlsJLB/+kjnMVgLCf4QMdpYS
-        EP4PMo9ZSkD4j5QBj14Cwn9F5jJ6CQh/Cxn0qCUg/DdkPqOWwN8uH4EWMvDRSkD475Q5jVYCv+b13eXx
-        aSVDH6UEhH+jzGuUEhD+M2X4vZeA8D8oc+u9BIS/B1lCryUg/E/K/HotAeHvSZbRWwkI/04yx95KQPh7
-        lKX0UgLCv7PMs5cSEP6eZTlnl4DwHyRzPbsEhH8EWdJZJSD8B8t8zyoB4R9JltW6BIS/kcy5dQkI/4iy
-        tFYlIPyNZd6tSkD4R5blHV0Cwn+SzP3oEhD+GWSJR5WA8J8s8z+qBIR/Jlnm3iUg/J3IHvYuAeGfUZa6
-        VwkIf2eyj71KQPhnluU+WwLC36ns5dkSEP4VZMmPloDwdy77ebQEhH8lWfbWEhD+QWRPW0tA+FeUpd9b
-        AsI/mOzr3hIQ/pVl+bdKQPgHlb3dKgHh55slIPyDy/6ulYDw8y7H8LEEhH8S2ePHEhB+PstRVAkI/2Sy
-        zyoB4ee6HMePeQn/hLLXPwk/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADw2Zcv/wHB
-        I/2epIXzLAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAACR1JREFUeF7t
+        1r1xJNcVBeA1GARDYAg0GIJKsTACpUBTpgJgMDJpKAAaMmTQkAkdYOcKKkCzMz3T/fr9fF/V1C6xwKDn
+        3ntO8QsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAf728vHyX1695/XL5EpPITn/I
+        6++vf16+BO9yGBX+ogQmkV2+hv/3t61+/VMJ8C4H8TH8RQkMLjv83/AXJcBXOYRr4S9KYFDZ3f8Lf1EC
+        q8sB3Ap/UQKDyc6+Ff6iBFaVxd8b/qIEBpFd3RP+ogRWk4VvDX9RAp3LjraEvyiBVWTRj4a/KIFOZTeP
+        hL8ogdllwc+GvyiBzmQnz4S/KIFZZbF7hb8ogU5kF3uEv/wzr58ub80MstC9w1+UwMmygz3DX/7ISwnM
+        IIs8KvxFCZwksz8i/EUJjC4LPDr8RQk0lpkfGf6iBEaVxbUKf1ECjWTWLcJflMBosrDW4S9K4GCZccvw
+        FyUwiizqrPAXJXCQzPaM8Bcl0Lss6OzwFyWws8z0zPAXJdCrLKaX8BclsJPMsofwFyXQmyykt/AXJfCk
+        zLCn8Bcl0IssotfwFyXwoMyux/AXJXC2LKD38BclsFFm1nP4ixI4SwY/SviLErhTZjVC+IsSaC0DHy38
+        RQnckBmNFP6iBFrJoEcNf1ECV2Q2I4a/KIGjZcCjh78ogQ8yk5HDX5TAUTLYWcJflMBFZjFD+IsS2FsG
+        Olv4y/IlkBnMFP6iBPaSQc4a/rJsCeSzzxj+ogSelQHOHv6yXAnkM88c/qIEHpXBrRL+skwJ5LOuEP6i
+        BLbKwFYLf5m+BPIZVwp/UQJbZFgrhr9MWwL5bCuGv7yWwI+XUfAtGdTPbyNb13QlkM+0cvhf/ZbX95dx
+        cEuGpQQmkc8i/MK/XYamBAaXzyD8wv+4DE8JDCrPLvzC/7wMUQkMJs8s/MK/nwxTCQwizyr8wr+/DFUJ
+        dC7PKPzCf5wMVwl0Ks8m/MJ/vAxZCXQmzyT8wt9Ohq0EOpFnEX7hby9DVwInyzMIv/CfJ8NXAifJ7xZ+
+        4T9flqAEGsvvFH7h70eWoQQaye8SfuHvT5aiBA6W3yH8wt+vLEcJHCTvLfzC378sSQnsLO8p/MI/jixL
+        Cewk7yX8wj+eLE0JPCnvIfzCP64sTwk8KD8r/MI/vixRCWyUnxF+4Z9HlqkE7pTvFX7hn0+WqgRuyPcI
+        v/DPK8tVAlfk34Rf+OeXJSuBD/I14Rf+dWTZSuAifxd+4V9Plr58CeQl/MK/rix/9RL49+XPFQk/SmBR
+        ws+7HIMSWIfw81mOQgnMT/i5LsehBOYl/NyWI1EC8xF+7pdjUQLzEH62y9EogfEJP4/L8SiBcQk/z8sR
+        KYHxCD/7yTEpgXEIP/vLUSmB/gk/x8lxKYF+CT/Hy5Epgf4IP+3k2JRAP4Sf9nJ0SuB8ws95cnxK4DzC
+        z/lyhEqgPeGnHzlGJdCO8NOfHKUSOJ7w068cpxI4jvDTvxypEtif8DOOHKsS2I/wM54crRJ4nvAzrhyv
+        Enic8DO+HLES2E74mUeOWQncT/iZT45aCdwm/Mwrx60ErhN+5pcjVwKfCT/ryLErgXfCz3py9EpA+FlV
+        Dv+HvP71moKF/fUyDlhHDv81/L+/RYBfLmOB+eXghf8zJcD8cujCf50SYF45cOG/TQkwnxy28N9PCTCP
+        HLTwb6cEGF8OWfgfpwQYVw5Y+J+nBBhPDlf496MEGEcOVvj3pwToXw5V+I+jBOhXDlT4j6cE6E8OU/jb
+        UQL0Iwcp/O0pAc6XQxT+8ygBzpMDFP7zKQHay+EJfz+UAO3k4IS/P0qA4+XQhL9fSoDj5MCEv39KgP3l
+        sIR/HEqA/eSghH88SoDn5ZCEf1xKgMflgIR/fEqA7XI4wj8PJcD9cjDCPx8lwG05FOGflxLguhyI8M9P
+        CfBZDkP416EEeJeDEP71KAGEf3FKYGU5gNXD/1tef/n612UpgRVl8cL/8vL9ZRY/v31lXUpgJVm48F/C
+        X/LfSoD5ZdHC/yH8JV9XAswrCxb+K+Ev+XclwHyyWOG/Ef6S71MCzCMLFf47w1/y/UqA8WWRwr8x/CU/
+        pwQYVxYo/A+Gv+TnlQDjyeKE/8nwl7yPEmAcWZjw7xT+kvdTAvQvixL+ncNf8r5KgH5lQcJ/UPhL3l8J
+        0J8sRvgPDn/J71EC9CMLEf5G4S/5fUqA82URwt84/CW/VwlwnixA+E8Kf8nvVwK0l8EL/8nhL3kOJUA7
+        GbjwdxL+kudRAhwvgxb+zsJf8lxKgONkwMLfafhLnk8JsL8MVvg7D3/JcyoB9pOBCv8g4S95XiXA8zJI
+        4R8s/CXPrQR4XAYo/IOGv+T5lQDbZXDCP3j4Sz6HEuB+GZjwTxL+ks+jBLhPhvWPrzNb0nThL/lcq5fA
+        ny+j4FsyqJ/y+uNtZGuZNvwln2/VEvB/AFtkYKuVwPThL/mcq5WA8D8ig1ulBJYJf8nnXaUEhP8ZGeDs
+        JbBc+Es+9+wlIPx7yCBnLYFlw1/y+WctAeHfUwY6WwksH/6SOcxWAsJ/hAx2lhIQ/g8yj1lKQPiPlAGP
+        XgLCf0XmMnoJCH8LGfSoJSD8N2Q+o5bA3y4fgRYy8NFKQPjvlDmNVgK/5vXd5fFpJUMfpQSEf6PMa5QS
+        EP4zZfi9l4DwPyhz670EhL8HWUKvJSD8T8r8ei0B4e9JltFbCQj/TjLH3kpA+HuUpfRSAsK/s8yzlxIQ
+        /p5lOWeXgPAfJHM9uwSEfwRZ0lklIPwHy3zPKgHhH0mW1boEhL+RzLl1CQj/iLK0ViUg/I1l3q1KQPhH
+        luUdXQLCf5LM/egSEP4ZZIlHlYDwnyzzP6oEhH8mWebeJSD8ncge9i4B4Z9RlrpXCQh/Z7KPvUpA+GeW
+        5T5bAsLfqezl2RIQ/hVkyY+WgPB3Lvt5tASEfyVZ9tYSEP5BZE9bS0D4V5Sl31sCwj+Y7OveEhD+lWX5
+        t0pA+AeVvd0qAeHnmyUg/IPL/q6VgPDzLsfwsQSEfxLZ48cSEH4+y1FUCQj/ZLLPKgHh57ocx495Cf+E
+        stc/CT8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPDZly//AcEj/Z6khfMsAAAAAElF
+        TkSuQmCC
 </value>
   </data>
 </root>
