--- a/OPChat - Design/friendPanel.resx
+++ b/OPChat - Design/friendPanel.resx
@@ -1050,4 +1050,207 @@
         iSdav51KNrOor68XUwCZc9hh/xfGor+P7DsatwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="slideDAddButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHcAAAAwCAYAAAArZOVeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIsSURBVHhe7dxLSxthFMZxP4dgUETrBQqh64Krboob6Ub6
+        HVzoVug2WK+xVARpUSy40phkElRSSaGmFVJqtaX1gvkmp/PMYDTkmG1yDs/it5o3cfHPZN7gnOmq1WpC
+        PjGuY4zrGOM6xriOMa5jLeNe3t7Ixs8v8up4U8YO12UkWJLu/RS1ERqgxXjpo7z/cSwXN1dqO3g07s55
+        RYbyizKQW1D/CLVZJiX9+Xl5EjZKV0tqw6a4+CRMlrdlMHyR+qbUcQbyC/LiaEOq138bWjbERdhkcVUS
+        +3Pqm1BnSxbSUrn8rcfFGcuwtuF63BQX11h+FdvXn5uX2W/5+7jYFWPzpC0me4bCHXX53684LrbU2Hlp
+        C8menvDSOn2yF8fFbyZsrbWFZNOz4rs47tPCirqA7MLZG8XtCy/C2gKyLYqrHSD7GNcxxnWMcR1jXMcY
+        1zHGdYxxHWNcxxjXMcZ1jHEdY1zHGNcxxnUsiot/7GoHybYoLsdEfIri4m517SDZhVunorhvvgfSm3ur
+        LiKDMil5Xf4Ux8UIAgaK1IVkDoYLts6+xnFhppKJ7lbXFpMdieycTHzebBwnwdTB84M19QVkx2iwXJ/Z
+        rccFjCAMc+ds1nCwKHsXp/WeDXEh+FONxjh7s9xgWYHJTJyxD8NCU1zAV/TUyW68yeKYSUfDkw9elj6o
+        j09Q497BJwFb6kE+OqHjYEoEzyrBM0u0dtAyLtnGuI4xrmOM6xjjulWT/yusJOrLHfg3AAAAAElFTkSu
+        QmCC
+</value>
+  </data>
+  <data name="slideDfriendrequests.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAADMJJREFUeF7t
+        3XusXFUVx3FaBApUq9LaQFBEwRSQ96shgHBFi1aLmKIQCxVswRAJRWoqGB6F2IK5FqWQIqDhcU0hVYHg
+        I0osQREVSVEKRijKX/5BYuIfJPyr3zV7Wee0M/Te89x7z++TrBjvnbvPWmv2KnfmzjlnNxERERERERER
+        EUnYkcQGYtt/MkZ9rxLfI44hRHZpd2Lc989Ioe71xB7WBJFBphEP+X4ZSdT/KDHdmiGyoxW+T0YafVgV
+        2iHyf/v6/hDQj1mhLSLB+b43BPRjaWiLSLDO94aAftg7eCLbPeB7Q0A/fhzaIhJM+N4Q0A97N0tkOw1I
+        H/qhAZECDUgf+qEBkQINSB/6oQGRAg1IH/qhAZECDUgf+qEBkQINSB/6oQGRAg1IH/qhAZECDUgf+qEB
+        kYLoB4QcnyFuIxr/SD7H0IBIQdQDQn6XhTS3O2RsbOx1/3btWF8DIgXRDgi5XRJS3Mkif0jtWFsDIgVR
+        Dgh5DRsOM8MfVjvW1oBIQXQDQk5vNRxmtj+0dqytAZGCxgeEY/yaeJB42b80FI/Z1XCYVf7w2rG2BkQK
+        Gh0Q1j8hHKbHLg7xNf/WTvjeZIajsdcfhvU1IFLQ2ICw9rDTVy/3h2zH1zofDsMxNCBS0OSA7BcOMdCl
+        /rDJDsen/eGN4jgaEClockAOCIcY6ktENMNhOJYGRAqaHJCvh0NU0tpwGI6nAZGCpl+kLwyHKeVTvkxr
+        OKYGRAoaHRDDMcoMSevDYTiuBkQKGh8Qw3GmMiSdDIfh2BoQKWhlQAzHmsyQdDYchuNrQKSgtQExHO+t
+        hmShP6wz5KABkYJWB8RwzEFD0vlwGPLQgEhB6wNiOO7FxNsIu3HNMv9y58hFAyIFnQxIrOiHBkQKNCB9
+        6IcGRAo0IH3ohwZECjQgfeiHBkQKNCB96IcGRAo0IH3ohwZECjQgfeiHBkQKNCB96IcGRAo0IH3ohwZE
+        CjQgfejHI6EtIsF9vjcE9GNjaItIsNr3hoB+3BzaIhKc7ntDQD9OC20RCexibn/x/THS6MNzvY6I7OBU
+        3yMjjT4cH9ohsrOLfJ+MJOo/N7RBZLjTiZd8z4wE6v0NcZQVLzIZ9prko8QtxMOE/eFsYPgeawTr30vc
+        1VB8l7iK0GBIo/7g+7k2rPkUcXBvdZHE1TogrPdVYnpvZZEM1DIgrPMn4rDeiiIZqTwgrHEdYVc3EclO
+        6QHhZ7cSx/ZWEclUqQHh524l9uqtIJKxKQ0Ij99GnNL7SZERMOkB4bF3Evv2fkpkROxyQMbGxl7ncR8L
+        DxcZLW85IHz/PmJW75EiI2jogPC9c8JDREbXTgPC135EzO59V2TEPeVz0cP//0L4ctLsj5YzCPvQpkgl
+        ZxOvEj8hdnVP9Dr1ThPmf18kNhP2qWN7l8zOJ7+aWEZcQCwiFhBnEvZRfosz/GufJew+7dcQG4jNExMT
+        b/Ym3fE1+2PmPYStY/cxEUnCbN/DreK4q4i9exmIRO5Xvm9bxXFfI8Z6GYhE7Hjfs53g+NcSep0iUbvE
+        92snOP63CQ2JRGkmcY/v1c6Qg526KxKVI4htvkc7Ry762H7i5hL2eajlhL2tOU7cQdxG3EBcQpxM2Pv/
+        sTvJ92U0yMneapaE2O/FdhG0dcSU/qXl8fZkX0HE+NfwozzN6JDbkSFFiZkNhl0A7Vl/3iphnR8QhxAx
+        sIF9zVOLDrk9Qawgjib0wj1CxxG/9+erVqy7nni3HaRDj3g60SPXLcQne1lL5+zU1W/6c9MojmMf0ejC
+        Ik8hKeR9N6GPqHTocOIFfz5awfGu7B25PbsTr/jhk0Pudscqq0Fadq4/B63j2HaBt7Z8zg+bLGpYHUqR
+        tqzw3neGHNq6GvrTfsikUce8UI407Rve886Ry4EhpcYc5IdKHrVsCiVJk1Z6v6NBTr8kPt7Lrn5X+WGy
+        QD1zQlnShIu9z1Eiv+8Te/Yyrc9jvnwWqOfyUJbUbb73OGrkaWcW1vWOzTRfNhvUZGc+Ss1mzZs375/e
+        4+iRr53yWof9fcls+DXCpGYbvL/JIGf7cGRVZ/pyWaEuXV2yRkd7X5NC3mtC+pVc6Mtlhbo+EMqTOjzu
+        fU2K/ypR9U5R0b1jVwfq0sW7a3KE9zRJ5H9CKKO0G32prFCXXYJIanC79zRJ5G/nlFSx1pfKCnV9JJQn
+        Vezu/UwWNdiFq6tY40tlhbpODeVJFad4P5NFDVVPQ73Bl8oKddmZnlLRNd7PZFHDy6GU0jr/QGYTqGv/
+        UJ5Uscn7mTSvpawlvkxWqEvnhtTgz97PpHktZZ3hy2RjfHz8Da9NqvB+Js/LKetgXyYb1PTbUJpU4v1M
+        Wg3/Wib/Tt6OqMmuRSZVeT+TRhl2746qtvhyWaCeS0NZUon3M2mU8XSoppLOr71bJ+qZH8qSSryfSaMM
+        u1dhWW8n7JKoW325LFDPtwh9FqsGz3tPk0UNt4ZSpsyuSrjZl8kS9elXrYoe9l4mixrKboJjfImsUaf+
+        HlLBKu9jsqjhrFDKlEV97n1dqPPQUK6UkfzZdNRQ9urwV/gSWaPOE0O5UsY+3sckkf8LoYxSRuW/ILpd
+        QkU/914mh9yrnHJ7li+TNers+mr5ybIb3DdyG4M2UcPzRJnbJWd3NZNBvFaZosO9f9mgpneG0iZvyZIl
+        //IfzxIl/ixUKlN1nfcwG9RU5iLXE/7jWaK+VaFMmaq7vYfZoKYy56Zf5D+eJerTO1gl3eU9zAY1lbke
+        7Rz/8SxRX9VLIo2s1d7DbFCTvelQxpO+RFaoa0MoT8q4wPuYDWqy28SVsdyXyAp1nR7KkzIO9T5mg5rK
+        fuboHb5ENqhpG6FfryqYNjEx8ab3M3nU84tQVmnrfKksUM9XQllSxf3ez+RRS9VbIcz1pZJnt7Cgnhmh
+        LKniPO9p8qjlQ6GkSrJ4XUYdTd2mbuTM9J4mjTq2hnJq8Rlimy+dFMubaOuOwCNjo/c3WdRQ91+Lk7za
+        JHkvCOlLnZK/aBo1vCeUUpskz5Ehb31qtwF2Xnayn+gl9/W9Kuo1w5dPBjnbJ5qlISd7n5Nib1OT+36h
+        hNo96odJAvneHNKWpiz1XieBfJ8jmjxT7vN+qCSQr84abEEyt2Ij1z1Dyo1J5tcscn02pCxNm+49jxp5
+        PhPSbdzNfsiokeeSkK604SHve7TI8aaQauP280NGixz/TuzRy1Zasdh7Hy1yPC6k2oqoz7wkv/NDmtKW
+        qH/3Jr+/EvbWdFuivvIJ+dm1haVlt3j/o0NubX9KNfYBmRnSlDZFezkccts3pNgaDYgMFN29w8npypBa
+        qzQgMlB0n/Qlp6b/9jGIBkQG8+cgGp5W2zQgMpg/B9HwtNqmAZHB/DmIhqfVNg2IDObPQTQ8rbZpQGQw
+        fw6i4Wm1TQMig/lzEA1Pq20aEBnMn4NoeFptu9oPHyXye19IU1rnz0E0PK22nED81A8dLXJ8hbAPLOpO
+        tm3z5yAanlbTPkw84odMBjm/RCwmdLnRlkzz3kfD82rK+4kH/FDJooYtxCeINj/xPJJO855Hg5zmh9Rq
+        9S5i3A+RDWp6kjjJCpR62S0Eoj2r0HIjDrNEK7Kz8LK/Tzo1biQOtoKlmg8SD3pfo0eu9xNln3j7FeRv
+        vtRIoN61hE6uKmEucYf3MTnkfqfXMBmHENG/M9Uk6l9K6IX8JOxDZHOnW2q5nhh2MtXeRBJXKGkDvbCr
+        whxrjZGd2b8eF65cufLf3q9sjI+Pv0FtX/Qa/+ds4h/+EOlDX24nZlmTJLB3Nf7o/ckWNdpVFxcS0V/C
+        KAb06TxipN8WnkPc6/0Q2Qn743HivbZZRon9qpHlHVylGeyXL/u+yZ79PeN3XrfIpLFvNhPZ/u1kL+JG
+        r1WkNPbRZURWr03sRfiLXp9IZewnu732Aba5Umb/1VjrNYnUjv2V7M1BjyG2eh0ijWGf3U3YH5iTYCfI
+        rPLcRVrBnrOLh0d/N6sDic2es0jr2H/LiShfwJ/jOYp0ir34Q6Lti4kPZdel/Y7nJhIF9qSd6jvPNmiX
+        DiKy/wyVpIv92dm7XAs8B5GosVdXE629LrEDXevHFkkCe3ZNb/c2zN5r3uTHFEkKe9c+Pt8YezH+hB9L
+        JEns4cZOxNI7VZI89vF1YTvX60RfXyRpY2Njr7Ofa3/B/pivL5I89rN9TrA2s31dkSywp5eFrV2Pxb6u
+        SBbY0zeFrV2P631dkSywp8fD1q7Hbb6uSBbY07UOiN7elaywpzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOw
+        pzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOwpzUgIsOw
+        p2sdEBERERERERERka7sttt/Ac2ADNEOoq5rAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="slideDaddfriends.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAADeJJREFUeF7t
+        3WmMXWUdx3GqgFiplUVZRIMiiIKSgGUXEEUWrSBbJbIE0IAgKFiDAjIshiAByyoMKAOTjpJxZu6dFkdA
+        qYoLpTZDGmwabIUY4jsSX5j4Vn+P/q4x7Tl3P895zr3fT3IyVp5znu3/P8u9556zHQAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAANDaqlWrFo6MjGzvfwLDp16v7z07O3uOkuG7Wsa0PKtl47+2snr16vX6
+        /2e1/EDLdfr3Cfq70JsBBsPk5OSeCu7LtaxUgL/m+O+atrNO21mhRPuctr2jqwGqY2xsbCcF8jIF8pzj
+        ujCq5wEly8dcNZAu7dEXK2Bvd+xGpXpf1nK2mwKk47777nuLgvNax2qpdNRaq+V4Nw0oly64j1FyvOr4
+        TIaSZGpiYmIXNxOIa2Rk5E1KjBsdj0las2bN30ICu8lAHL7W+KXjMHlKkm+46UCxlBy7KjnWO/YqQ6dc
+        t7gLQDGUHO9UoG1wzFWO2n6HuwL0V/hSTgG21rFWWerDNe4S0D8KrEcdY5WnU8QT3C2gd0qOSx1bAyPc
+        E+buAd2bnp7eyzE1UJT0U+4i0D2djjzpmBo46ttp7ibQudnZ2eMcSwNJR5Et/P4EXavSl4HdUh8vdHeB
+        9uki9gjH0EBTgmwKt82420B7FDgTjqGBp1OtT7vbQGsrV658u2NnKISdgbsOtKaL80scO0NjcnJyZ3cf
+        aE571BnHzdAIv3F394F8o6OjOzhmhop2Cg95CIB8umBd4pgZKur3Rg8BkE/XH19xzAwd9X2RhwHIpj3p
+        w46XoaPrkKM9DEA2JchzjpehoyPIRR4GIJsSZLPjZegoQb7jYQCyOVaGknYO93oYgGyOlaGkBBnzMADb
+        GrZbTLamBPmdhwLYVq1W28+xMpSUIK95KIBtKUEOd6wMDSXFK+FmRf29Rn+P8lAA21KQnOi4GWjq51z4
+        QrRer7/HXQdaU+B81jE0cNS3l0JShOssdxfojILoLMfTwNBp05Pq1xJ3Eeiegulsx1XlKSmmZmZmDnbX
+        gN4NQoIoMebDhw3uEtA/Okc/3XFWSWr/1ycnJ9/s7gD9pQA7ybFWKTpqvKijxr7uRk/CD8a0vYM0Fmfq
+        b/jo9079fUT/Htf/fkL/+1Et39dyvZYLwh3AXPgPCQXAUY65ylCQrghB7S50bHx8/G3axhkO+he92Y5p
+        3c1OoAvCayK8eQwSTe6Bnu9KCNdMbnpHwktHdUT4gvr7lDfVd9r2r1THJSEBXS2qLuz5PL/JUwAe62a3
+        Tf3bU+vd4U1Eo0S+e3p6eh83A1UVnjDoOU3W/Pz8Gzrv/7Cb3JaZmZndFKT3eBOlURvu5/Sr4sKbYT2f
+        SVKwH+CmtuQ38X7NqyZDR7GreNxpRSmgfut5TI7adoib2ZKOMh9U+T941eSEtoW7p91cVIUm7jHPYVJ0
+        wdv2+85V9nyvlrzwYYGbjSrQ4f9bnrtkqE1fcvOaCqctKnuvV6sMtfkuTrkqQkeQpZ63JCh4Rt20psbG
+        xnZS2bpXqxy1fUoX8Du6O0iVJuq9nrPSqS3z7QSNyrxVZZ/1apWlPjwdEt3dQqo8X6Vr56Lct4Y87VUq
+        T315qpc7AxBBmCTPV2nUhlvdnKZUbsyrDAz16UfuHlKkCbrec1UKHTk2tXNqpXYu9yoDR2NwrbuJ1ISP
+        VD1PpVDgn+Gm5FKZY118YIU+urtISZnvCFFQ/N7NyKUEXhTjG3+1ZarZ4mKFCX3UkXSxu42U6BC/yvMU
+        lQKv5V5TZR508UK5ulwuVij19RFXh5RoYi7zHEWjOlsePWq12mEuXjhXmcvFCsdrGRI0PT29l+cnmnZu
+        u9CR7dcuXjhXmcvFCqc+r1N1C/5bK5KhiYl24+LGjRv/PjIysr2rzqQ96ckuHoWrzeViUejoeparRSqU
+        IFd6fgqnum5ztbliHj0CV5vLxaJQgmxwtUiFJmV3z0/hdHr1UVebKea1R4OrzuVi0WiMTnLVSIX22oW/
+        M12J+Iqry6V2POTi0bjqXC4WTZgLV41UaK91iuenMJr4211dpvCQBReNytXncrGowlHd1SMRCzQphb63
+        UNs/0XVlUgKd5qJRufpcLhaVxuoyV49U6CjyVc9PIVo9GqeM06vA1edysaiUIHOuHqnQpCz0/PSdgn+9
+        q8mlMq+6eFSuPpeLRcdvRhKkJLnB89NXCv77XUUmHb32cNHo3IRcLhad5oKbGFNT1As+w+mbq8ikYDjV
+        RaNzE3K5WHQak+VuAlISJsZz1DfhUzJvPlMRdbbLTcjlYtFpzMbdBKQknPvOzc391fPUFzrF2t+bz6QE
+        GXXR6NyEXC4WncbkRTcBqVFAL/M89UWrXw4qGH7uoh1TW++u1+uf6nZxE3KpzMe3XqfdRf26yc3sipuA
+        FGlyn/M89cybzKW65l20Y1q3redplUFtO8PN7Ip2LLwoKFXh+biep555k7l6+Yh3kBNE6/ONeso0QT1f
+        PIeflHpzuV5//fV/unjHBjlBdJrGO94Tt0B7954eDq31/+xt5XLRrgxygkxNTb3fm0KqZmdnj/R8dWXL
+        li3/8KZyhR9SuXjHOIKgdDoK9PRwB28mVzjKuGjHBjlBJiYmdvGmkDJN9BLPWVe0iaa/tdb2X3DRjg1y
+        gvA0+ArRZP/G89YxnaYt8mYyadvTLtoxHX3+ovXXdru4Cbm0/Qe0rOxy6frnw+G0001AFWiyu/7yUIF4
+        kDeTSf89+ks3G9yEXC4WncbkeTcBVdDLL/50BDnTm8mki9Evumh0bkIuF4tOCdLWO1OQEB1Ffub564jW
+        +7Y3kUnBUNq7292EXC4WncbscjcBVaFJu83z1xElwOPeRKZwMeqi0bkJuVwsOo112y8zRSIU6F09qlST
+        /SdvIpe2Xcqr1Vx9LheLjk+wKkhB3PUvDmdmZt7lzWQKpxQuGpWrz+ViUWmcf+LqUSWauJc8hx1TAizz
+        ZjKV8ZzgwNXncrGoNM7nunpUhSbtGs9fV7R+y09lVKZvt9i3y1XncrGowgtLXT2qQIF7vOeua/Pz829o
+        U62+UT/PxaNx1blcLJp2diRIiCbsRM9dz8K2vNlM4ZeHvdz63g1XncvFoplt8fxiJKRer3/e89YXSpCm
+        H/cGKnOdi0fhanO5WBS6TnvG1SJx4XcgI563vlICLHQdmXQU2dlFo3C1uVwsCh09jnG1SFWtVnuHgrjr
+        mwdbCR/nuqpcqv9qFy+cq8zlYoVTn+uuEqkKe7Ci3yyrQHit1Vumwn9XIr3sVQrlKnO5WOG0Y9rPVSI1
+        DsibPVeFU10Xuupcuv452sULFZ4D1mxxsUJpp3GDu43UhE9NNEFdP3anG0qQTe3cSqF2fc+rDCyNxbpW
+        R1SUYHR0dAdNzo2ep+gU/Fe4KblCG1VurVcZSNpBfcDdRSo0KUcqOaKc4zfT6v6sYHp6eh8XHziah9Pd
+        TaQgPL1de+QHPT+lU5I+4aY1pTb39Jv4FKlP33T3kAJNyHmxv6Vuhy7GWz4fN1C5qO9PL5Lm4i53C2XT
+        ZByoJfpNgJ2YnJzc081tSqckn/EqlaWj5j3uDsqkYFqkxKjEp0Ahgdv5VCtQ2Z5vnCyL2n6Tu4ESLVBy
+        XOQ5qQwFz61uf0u6uP+Q9sRdP2yuDJqT8918lEXn6Uco0Cr7sajafqm70pJOyxYrSX7qVZOlPm3Rcqib
+        jTKEj0IVLCs9J5XW6UefKR8tlRgPh5sv3VTEpglYqMQo5K7bMqlfx7uLbVGS7KFl3KuXTu3foPYc5+ah
+        BP+5zujlqeipU+IvdV/bVqvVDlNwznkT0anNr6r+i9v9wAEFCHsmTcR6z8lAU18vcbc7EhJFYzThzRRO
+        SfGClvO4p6pEmvD9tdQ8J0NDfb652z2ygnZ3rX+l/nb94O082m54aPYdMzMzB7s6lEEXebtqIlZ4XoaS
+        gvEX7dy31YzH8Swt92rp+HULWucVLT/WclX4mNmbRVl8J2tPj9oZNBqPpg996NACJc27dRp3pJbTwzWd
+        tn+Zliu0XKrl3Hq9/gklwwHhwd1eBynQHnOplkp9ERaLAveHCtrdPFQYJuHQrcR4xrGAJjROX9aQNX3O
+        FgaE9orh+4w7Pfdok8Ztg8ZtWYofq6pth6ptN/JFYY9qtdrhGszNnnN0QeMXLqAvVjDu6GEtjZLik2rL
+        /76L0b/Dp11L/J/RCV0YnulxRJ8oIB8KD3zwEEeh+vZWEixX3ZvcjG1ork9xcbRDA3qqxw4F0Phu1rJC
+        QbtUR5bFHvZ+WaCk+EhICi3Pu8qWYiduZWlQ3+cxQyRKlHUa9we1XK1APVmntvu2c+0SkkvrHqIjwDla
+        9xYtT3mTHQu/6NT6u3vTyKNBWuMxQwLCPW3h9Ejz8kf9Xa/l5aIeoKdEG3cYIIsGf6nHCkNKScIT3PNo
+        L9X2OSsGk3aSjzkc8P/C81c9RhhyKXwknRwdPa7y+GDI6TSLH1RtTQnyuMcHQ06x0PLRq0NHgzLl8cGQ
+        Uywsd1iggQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmS
+        gQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmSgQRBAwmS
+        gQRBAwmSgQRBAwmSgQRBAwmSQYNy7urVq29mYeFVCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AMXbbrt/A1UWQnpcIVzeAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="slideDfriendoptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAADIpJREFUeF7t
+        3W2wVVUZB3CUwhS5RUqSgEZmERMVoOULJt5SsbAYKwfh1giSExqacdMR0wRHceoCpaNpGtOMpOZbaWQo
+        KJovk68pg4ZYNn7ogzPO8MGZvtb/Oc+/6Y5zzrmcc/Zae629/7+Z59u+53lZHjz7nL3XHiUiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIindgXcTBi
+        GuIExNcRyxE/RtyMeJBxAeJ9CJFK+gRiDWIrYmd/f/9b/+lQX1/fm/jbsxH2ppKK2AdxBGIeYgnifMYi
+        xFzEeESVTUDcxv/GC4HXewnxeXtxyZN9ZPgu4g9c07Zw3C7EtYjPIKrkVLYYBF7/Ek8jKbP/Q3wU8VXE
+        KsQ9XL+u4O+3II5D5Gw0Yi1bCgp5bmhklKS8F2Enk5u5ToXDa9+EGIfIzUGIR9hGFMi3upFZSncYYgPX
+        JTjk+idiuiXOxOGI3Sw/KuS1czwpiX1kuIhrER1yn9ioIm2T7VsmlhzdwMDA26jhQC9FYpqBeI7rUBrU
+        cGyjmnQ9yVJLgxqu8VIklrmcfRJQz5FeVjLs94hTEb9iiaVDLROtMAnvK5x5MlDTa4gDGtWV72uIXSwt
+        GahpXaM6CWo+550c1Ha9l1gaOx+7leUkCfV9sFGpBDGVc04Wauz3UkuxjmUkCzXa71ESwBhE6SfkI0GN
+        9lHL/iWPbQpLSNrg4OAe1PoeL1mKNMQZJw+1LvSSo1rE9MlDrXaOJAU6krPNAup9xsuOahnTJw+13ucl
+        S1F6uoaqDKh5lpceTTZvEIN69cNhQY7hTLOCumNfqJfbG0QfswpyL2eaHdQe82Q0tzfIei9bejGR88wS
+        6j/F24gitzfIY1629GIV55kl1B/zY1ZWbxDDuqUHf+csszRt2rR/sY8YcnyD2N2d0qXpnGPW0MfHvJ3g
+        cnyD2H3/0qVBzjFr6ONcbye43M5B7D7/3G9fLtV2zjJr6GOjtxNcbm+QMq9Zy94YzjF76OUVbym43N4g
+        Mb/hq5yjOcdKQD8xdh3M7Q1yspct3TiPc6wE9DPT2woqtzeITtB7sJFzrAT0c5a3FVRub5DjvWzpxtOc
+        YyWgnxg3CeX2BtH2pN3iDCsDLd3inQWV2xtktpctnRrHGVYGerrfWwtKb5CaqMQv6MOhp6e8taBye4Pk
+        tCtlUk7iDCsDPb3qrQWV2xvENhWXLpzJGVYGenrDWyucfVX6LYTtXr+a6bKAemPfcVkZyznDyhgaGnqH
+        vRXp03z5LKH+PyEWNDqRjqzkDCuFvRVpJl86a+hDG8l16HLOrjIC3RdSldsB9G1Wh9ZwdpWBnmwzuaId
+        xpfPGvqwHfqlA1dxdpWBnl7w1gpVid+L0IfuKuxQFf8PYiekhePLZ42tSAcu4+wqAz392lsrXNb37KP+
+        R70N6URpj1MLBT1d7a0V7iGmyBLqH/I2pBNLOL/KQE+hLneP9tDSEFD/Od6GdCKpR6sVAT191lsr3ABT
+        ZAn1z/E2pBN9nF9loKdQGzVPZoosof4+b0M6ldzz9XrBnkJJ/qFCzaDuZ7186cbdnGP20MvL3lIwS5kq
+        K6j7Qi9funEl55g99PKItxSM7SD/LNNlob+//y3UPLZRvXRlMWeZPfTyO28pqAmIbB4yhFqPblQtXTuO
+        s8weerndW4riCESyG16gtgsQ77dCpTfJP+55b6GXmG8QM56pk4K6/ujlSREqs3EDeonxEevdLmX6ZKCm
+        xV6aFGE/zjV76OVJbymqDzB9MlBTjO1Xa2N/zrUS2FNsNzB96VCLrrkq2CTOthLQTxk7eCRzxyFq+YiX
+        JEX5EmdbCejnUm8rusdZQmlQwz1eihTpes63MtDTZG8tqkVMXxrUoD14C3Y6Z1spAwMDb6M3u+x930aX
+        cZT6ZQfyP+5lSJHsWRpvcMbZQy8PIC5GHIOwy0Ji+xlLiQ65T/MSpGjjEOs556yg7vsQX0Ck8ovx2Swt
+        KuSNsd1q7U1ErEQ8iNiF+BviCa5BclBbir8Wn8XyokLe0BdpSgsLuQbJQW0pPnfvDJYXFfI+5ukltp9y
+        DZLCk/AyzjFG8mWWGBXyPuHpJTb7V/oXiIcR9twN2zrGLgi8HPFnrk8QeP27EfOHxTcQ30EsQUxFpOiL
+        LD8q5I3xTBTp0GauTxB4/Ss9TVbmsPyokPcvnl5S8iLXJwi8/jpPk5WjWH5UyKt7zlPDtQkGKULtkBjS
+        DJYfFfKG2I9YehD8Akfk2OKpsvJxlh8V8r7k6SUVC7g2wSDHTk+VlcNZflTIu8PTSyqiXFKBPLnd+HMI
+        S48KeV/x9JKK3VyboJDHLiPJSSl3FyKvXfkgiZjFdQkOudZ4ymyUcncm8u729JKCm7kuwSFXbief+7L0
+        qJD3H55eyjaFaxINcn7KUydpFcKuLLgXYRdPbmPZ0SH3rS1iBUIiuY3rEQ1y3uKpk7SDZSYLNW73UiW0
+        0zjz6JB7mpeQFnvkNEtMFsp80auVkA7lvEuB/HYpRXJf+bK8pKFMnZ8EZnfr/ZXzLg1qeAgx3gpKRDYP
+        H2K9EsBBiKS2+0c9ds95GbuW/M8+iEV2TwpLSh7qvRNxImuXgtiz/pJ99DFq24Y4ExHjxin7eDcDYQ+i
+        2ckSstPX1/cm6l+LSPmbweTZw1ayeajO4ODgHtR7CaLXjRts8wrbDcVuyLoWYZuwvcA0lYPe7CarWP/A
+        VIJ9U3Q155cl1H8VopvzlBMQr/FlasW+iUPv30foKVTvYh8bTkHYZsevcl6VgH7sbsROn+pq/5Ku4EvU
+        Evq3W6lr/dCdMYhvIn7PmVQa+rSPXgcgOjEFEfR++9Shf7tCoNO5Zc0+X69i/7WD3u1xZPvZIPbSaESW
+        m+kVZdOmTf/GDJYiYm7fWopSdvtLDZ/2aruidHJSeh7/vLYwA/uRdnZjGhUzCbGVfQphJq8jbGPrvf1N
+        IMtnoxcNc/gJopP/CyetlP2ZcoIZ2TVKJzWmNbLl/LNawxzs1t7pjYlk7Bz2I3sB87JL1e3EfCQb+Ce1
+        h1ks9JHk5zL2IB3C7Jb5CFuyE/eHeXjtYRZXNKaSkbWsXbqEGdo2q+2+tTmYhwpgHht8LOnL+hfwlGCW
+        tmFduxP44Fse5QTzSH6L2JWsVQqCma720ba0iYcKYB5n+FjSo3/NAsFs7TKcVkrZ/yplmMmHfTTpKGWb
+        y7rgM0jsCoRWruChApjHXT6WNNivwc+zNgkEM7Yfx1oZa5dj8FABzCSZjf4uZk0SGGbd7qPD+TxMAPNI
+        4lHUE1iPRIB52x14rYzlYUKYyed8NOXR7x2RYebtdlRJ8jmOZcE8NvpYyjGGdUhEmPuAj7+pUh55kDLM
+        pLQtmuazBokIcx/pOeQP8FABzMMeulqKm1iDRIbZH+pL0NQADxPAPG70scT3OmuQyDB7uyuxlWw2kYsB
+        87B7bqL7EPNLCTB/e0Z8O/fzUAHMw27Yi2oec0tJsAbtdvxYzMMEMA/bcyuq2m66kAqswQJfiqZ0Kfww
+        mEf059z/lrmlJFiD63wpWqrU/mK9wCyiP5ekljv/pQRrMNIj4fQt4zCcSRS6pCERWIt2V/jqPGQYzKPd
+        V+OFmsOcUjKsxVxfkqaiP8MxZZhHu1kV6iLmlJLZWviSNMfDBDCOkTbCKIxu8UwE1sLuWW/nUR5ae5jF
+        NT6S8PTtSCKwFs/5krR0Iw+tPcziDh9JWPsznySC69JKrR+hMBxm8bSPJKzZzCeJwJoc4kvT1Mk8rPZ4
+        X39w32Y+SQTW5FhfmqYm8zABzMN2pAxKm8IlBmvSdm9aHiaAcQT/LeQu5pJEYE1+6EvTnHY7+T+MY5ZP
+        JZxnmEsSgTVZ70vT0ss8tPYwi3k+kkCGhobeYS5JBJbldl+dlrbx0NrDLBb7SMIYzTySEKzLVl+elu7g
+        obWHWazwkYQxiXkkIViXka7qvY6H1h5m8SMfSRhHMY8khA/fb0f79hJmYc/hD+Z05pHEcH1a0dawhFn8
+        0kcSxjLmkcRgbdo9ZOcHPKz2MIs7fSRh6JmDicLaHOhL1NSFPKz2MIvNPpIwfs48khisTbvrsb7Hw2oP
+        sxhpu6Se/IZ5JDFYm6m+RE3pueqEWTzlIwljC/NIYrA2n/QlaupcHlZ7mMXzPpIwdJlJorA2M32JmlrK
+        w2oPs9jhIwlj++Dg4B5FeoG1Od6XqKkFzf6mjoFZBD0HERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERGRyho16r+aav+aYMyPswAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
